compiler/testData/checkerWithErrorTypes/quick/ConflictingOverloads.jet
// http://youtrack.jetbrains.net/issue/KT-424

class A {
    <!CONFLICTING_OVERLOADS!>fun a(a: Int): Int<!> = 0

    <!CONFLICTING_OVERLOADS!>fun a(a: Int)<!> {
    }

    <!CONFLICTING_OVERLOADS!>fun b()<!> {
    }

    <!CONFLICTING_OVERLOADS!>fun b()<!> {
    }
}

namespace deepSpace {
    <!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
    }

    <!CONFLICTING_OVERLOADS!>fun c(s: String)<!> {
    }

    class B {
        <!CONFLICTING_OVERLOADS!>fun d(s: String)<!> {
        }

        <!CONFLICTING_OVERLOADS!>fun d(s: String)<!> {
        }
    }
}


// check no error in overload in different namespaces

namespace ns1 {
    fun e() = 1
}

namespace ns2 {
    fun e() = 1
}

